# BinPackingFYP

./: README.md
Refactored_BPP/: CMakeLists.txt  algorithms.json  app.py  init_db.py  input.db  readme  test_app.py  testing  testingcpp.cpp  upload-csv-to-db.py
Refactored_BPP/frontend/: index.html  styles.css
Refactored_BPP/include/: Bin.h  BinPackingGame.h
Refactored_BPP/input_data/: beasley_and_falkenauer.csv  hard28.csv
Refactored_BPP/plotting/: visualization.py
Refactored_BPP/src/: AVLHeuristics.cpp  AVLTree.cpp  AVLTree.h  Bin.cpp  BinPackingGameBF.cpp  BinPackingGameBFD.cpp  BinPackingGameFF.cpp  BinPackingGameFFD.cpp  BinPackingGameHybrid.cpp  BinPackingGameInit.cpp  BinPackingGameMTRP.cpp  BinPackingGameNF.cpp  BinPackingGameNFD.cpp  BinPackingGamePrint.cpp  BinPackingGameWF.cpp  BinPackingGameWFD.cpp  MTP.cpp  main.cpp
Refactored_BPP/tests/: TestData.h  hybrid3_out.csv  hybrid_hard28_out  hybrid_hard28_out.csv  test.ipynb  test_binpacking.cpp
